# invenio-logging

./: .editorconfig  .git-blame-ignore-revs  .gitignore  .travis.yml  AUTHORS.rst  CHANGES.rst  CONTRIBUTING.rst  INSTALL.rst  MANIFEST.in  README.md  README.rst  RELEASE-NOTES.rst  pyproject.toml  pytest.ini  requirements-devel.txt  run-tests.sh  setup.cfg  setup.py
.github/workflows/: tests.yml
.tx/: config
docs/: Makefile  api.rst  conf.py  configuration.rst  index.rst  make.bat  usage.rst
examples/: app-fixtures.sh  app-setup.sh  app-teardown.sh  app.py
invenio_logging/: __init__.py  config.py  console.py  datastream.py  errors.py  ext.py  ext_fs.py  ext_sentry.py  fs.py  logging_engine.py  proxies.py  sentry.py  sentry6.py  structlog.py  utils.py  version.py  views.py
invenio_logging/datastreams/: __init__.py  backends.py  builders.py  decorators.py  log_event.py  managers.py  schema.py  tasks.py  uow.py
invenio_logging/datastreams/app_logs/: __init__.py  backends.py  builders.py
invenio_logging/datastreams/audit_logs/: __init__.py  backends.py  builders.py
invenio_logging/datastreams/component_templates/: __init__.py
invenio_logging/datastreams/component_templates/os-v1/: __init__.py  common-log-v1.0.0.json
invenio_logging/datastreams/component_templates/v7/: __init__.py
invenio_logging/datastreams/templates/: __init__.py
invenio_logging/datastreams/templates/os-v1/: datastream-log-v1.0.0.json
invenio_logging/datastreams/templates/os-v2/: __init__.py
invenio_logging/datastreams/templates/v7/: __init__.py  datastream-log-v1.0.0.json
invenio_logging/engine/: __init__.py  backends.py  builders.py  log_event.py  managers.py  tasks.py  uow.py
invenio_logging/resources/: __init__.py  config.py  resource.py
invenio_logging/templates/invenio_logging/: index.html
tests/: conftest.py  test_console.py  test_examples_app.py  test_ext.py  test_fs.py  test_invenio_logging.py  test_sentry.py
tests/datastreams/: conftest.py  test_backends.py  test_builder.py  test_manager.py
