# SPDX-FileCopyrightText: 2015-2024 CERN.
# SPDX-FileCopyrightText: 2022-2024 Graz University of Technology.
# SPDX-FileCopyrightText: 2026 TU Wien.
# SPDX-License-Identifier: MIT

[project]
name = "invenio-logging"
description = "Module providing logging capabilities."
readme = "README.rst"
requires-python = ">=3.8"
license = "MIT"
authors = [
  { name = "CERN", email = "info@inveniosoftware.org" },
]
keywords = [
  "invenio",
  "logging",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
]
dependencies = [
  "invenio-celery>=2.0.0,<3.0.0",
  "invenio-db>=2.0.0,<3.0.0",
]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/inveniosoftware/invenio-logging"

[project.entry-points."invenio_base.api_apps"]
invenio_logging_console = "invenio_logging.console:InvenioLoggingConsole"
invenio_logging_fs = "invenio_logging.fs:InvenioLoggingFS"
invenio_logging_sentry = "invenio_logging.sentry:InvenioLoggingSentry"

[project.entry-points."invenio_base.apps"]
invenio_logging_console = "invenio_logging.console:InvenioLoggingConsole"
invenio_logging_fs = "invenio_logging.fs:InvenioLoggingFS"
invenio_logging_sentry = "invenio_logging.sentry:InvenioLoggingSentry"

[project.optional-dependencies]
sentry = [
  "sentry-sdk[flask]>=2.0.0,<3.0.0",
]
tests = [
  "flask-login>=0.6.1",
  "httpretty>=0.8.14",
  "iniconfig>=1.1.1",
  "mock>=1.3.0",
  "pytest-black>=0.6.0",
  "pytest-invenio>=4.0.0,<5.0.0",
  "sentry-sdk[flask]>=2.0.0,<3.0.0",
  "sphinx>=4.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "invenio_logging/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
  "/invenio_logging",
]

[tool.isort]
profile = "black"

[tool.pydocstyle]
add_ignore = ""

[tool.pytest.ini_options]
addopts = '--black --isort --pydocstyle --doctest-glob="*.rst" --doctest-modules --cov=invenio_logging --cov-report=term-missing'
filterwarnings = ["ignore::pytest.PytestDeprecationWarning"]
testpaths = "tests invenio_logging"
live_server_scope = "module"
