# -*- coding: utf-8 -*-
#
# This file is part of Invenio.
# Copyright (C) 2015-2024 CERN.
# Copyright (C) 2022 Graz University of Technology.
#
# Invenio is free software; you can redistribute it and/or modify it
# under the terms of the MIT License; see LICENSE file for more details.

[metadata]
name = invenio-logging
version = attr: invenio_logging.__version__
description = "Module providing logging capabilities."
long_description = file: README.rst, CHANGES.rst
keywords = invenio logging
license = MIT
author = CERN
author_email = info@inveniosoftware.org
platforms = any
url = https://github.com/inveniosoftware/invenio-logging
classifiers =
    Development Status :: 5 - Production/Stable

[options]
include_package_data = True
packages = find:
python_requires = >=3.8
zip_safe = False
install_requires =
    invenio-celery>=1.2.4
    invenio-db>=1.0.12

[options.extras_require]
tests =
    pytest-black>=0.3.0,<0.3.10
    flask-login>=0.6.1
    httpretty>=0.8.14
    mock>=1.3.0
    pytest-invenio>=1.4.2
    iniconfig>=1.1.1
    sphinx>=4.5
    # Sentry-SDK v2.x has breaking changes (see https://github.com/inveniosoftware/invenio-logging/issues/73)
    sentry-sdk[flask]>=1.0.0,<2.0.0
sentry_sdk =
    sentry-sdk[flask]>=1.0.0,<2.0.0

[options.entry_points]
invenio_base.apps =
    invenio_logging_console = invenio_logging.console:InvenioLoggingConsole
    invenio_logging_fs = invenio_logging.fs:InvenioLoggingFS
    invenio_logging_sentry = invenio_logging.sentry:InvenioLoggingSentry
invenio_base.api_apps =
    invenio_logging_console = invenio_logging.console:InvenioLoggingConsole
    invenio_logging_fs = invenio_logging.fs:InvenioLoggingFS
    invenio_logging_sentry = invenio_logging.sentry:InvenioLoggingSentry

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[bdist_wheel]
universal = 1

[isort]
profile=black

[check-manifest]
ignore =
    *-requirements.txt

[tool:pytest]
addopts = --black --isort --pydocstyle --doctest-glob="*.rst" --doctest-modules --cov=invenio_logging --cov-report=term-missing tests invenio_logging
filterwarnings = ignore::pytest.PytestDeprecationWarning
testpaths = tests invenio_logging
